# 2026-QuEra-Technical-QuantumETS

./: pyproject.toml
assets/: cheatsheet.ipynb
team_solutions/QuantumETS/: team_solution.md
