[project]
name = "steane-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bloqade-circuit[cirq]>=0.10.6",
    "ipykernel>=7.1.0",
    "stim>=1.15.0",
    "tsim",
]

[tool.uv.sources]
tsim = { git = "https://github.com/QuEraComputing/tsim.git" }
bloqade-circuit = { git = "https://github.com/QuEraComputing/bloqade-circuit.git" }